# xiaozhi-esp32

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  application.cc  application.h  idf_component.yml
main/components/78__esp-opus-encoder/: .component_hash  CHECKSUMS.json  idf_component.yml
main/components/audio_board/: CMakeLists.txt
main/components/audio_board/esp32_p4_function_ev_board/: board_def.h
main/components/audio_board/movecall_moji_esp32s3/: board.c  board.h  board_def.h  board_pins_config.c  board_pins_config.h
main/components/av_stream/: CMakeLists.txt  av_stream.c
main/components/av_stream/av_stream_hal/: av_stream_hal.h  av_stream_hal_lcd.c
main/components/display_service/led_bar/: led_bar_is31x.c
main/components/esp-adf-libs/esp_audio_codec/include/decoder/: esp_audio_dec_default.h
main/components/esp-adf-libs/esp_audio_codec/include/encoder/: esp_audio_enc_default.h
main/components/esp-adf-libs/esp_codec/include/codec/: esp_decoder.h
main/components/esp-wifi-connect/: CMakeLists.txt  wifi_configuration_ap.cc
main/components/esp-wifi-connect/assets/: wifi_configuration.html
main/components/esp_peripherals/: CMakeLists.txt
main/protocols/: protocol.h  protocol_types.h  sip_service.cc  voip_service.cc  voip_service.h
